--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,13 +1,14 @@
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: pema-mongodb-atlas-keys
-# type: Opaque
-# data:
-#   # Example:
-#   # password: {{ .Values.password | b64enc }}
-#   # TODO: Base64 is not secure.
-#   # Use something else here
-#   # Note: Don't change the name of the keys
-#   publicKey: 
-#   privateKey: 
+apiVersion: v1
+kind: Secret
+metadata:
+  name: pema-mongodb-atlas-keys
+  namespace: pema
+type: Opaque
+data:
+  # Example:
+  # password: {{ .Values.password | b64enc }}
+  # TODO: Base64 is not secure.
+  # Use something else here
+  # Note: Don't change the name of the keys
+  publicKey: ""
+  privateKey: ""
