--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pema
+  namespace: pema
 spec:
   selector:
     app: pema
@@ -9,3 +10,4 @@ spec:
     - protocol: TCP
       port: 5000
       targetPort: 5000
+---
