--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -48,6 +48,13 @@ spec:
         image: ghcr.io/vadasambar/pema:latest
         ports:
         - containerPort: 5000
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
 
         volumeMounts:
           - name: settings
